--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
     "gatsby": "^2.15.6",
     "gatsby-plugin-emotion": "^4.1.5",
     "gatsby-plugin-typography": "^2.3.6",
+    "gatsby-source-filesystem": "^2.1.21",
+    "gatsby-transformer-remark": "^2.6.21",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
-    "typography-theme-kirkham": "^0.16.19"
+    "typography-theme-kirkham": "^0.16.19",
+    "typography-theme-legible": "^0.16.19",
+    "typography-theme-parnassus": "^0.16.19",
+    "typography-theme-stow-lake": "^0.16.19"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
